[package]
name = "subtle"
# Before incrementing:
# - update CHANGELOG
# - update html_root_url
# - update README if necessary by semver
version = "2.3.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>",
           "Henry de Valence <hdevalence@hdevalence.ca>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/subtle"
homepage = "https://dalek.rs/"
documentation = "https://docs.rs/subtle"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "constant-time", "utilities"]
description = "Pure-Rust traits and utilities for constant-time cryptographic implementations."
exclude = [
    "**/.gitignore",
    ".travis.yml",
]

[badges]
travis-ci = { repository = "dalek-cryptography/subtle", branch = "master"}

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["std", "i128", "mesalock_sgx"]
std = ["mesalock_sgx"]
i128 = []
nightly = []
mesalock_sgx = ["sgx_tstd"]
